it will make the forturne quiz
Co-authored-by: Joseph Nilles <jbnilles24@gmail.com>

--- a/css/styles.css
+++ b/css/styles.css
@@ -10,3 +10,15 @@
 #stressQuiz{
   display: none;
 }
+#fortuneQuiz{
+  display: none;
+}
+#lowLuck{
+  display:none
+}
+#mediumLuck{
+  display:none;
+}
+#highLuck{
+  display: none;
+}
